k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saunah-backend-test2
  name: saunah-backend-test2
  namespace: class-pm4-2022-7-staging
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: saunah-backend-test2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: saunah-backend-test2
    spec:
      containers:
      - image: ghcr.io/saunah/saunah-backend-test
        imagePullPolicy: Always
        name: container-0
        ports:
        - containerPort: 8080
          name: 8080tcp
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 800Mi
          requests:
            cpu: 1500m
            memory: 800Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: saunah-backend-test2
  namespace: class-pm4-2022-7-staging
spec:
  ports:
  - name: 8080tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: saunah-backend-test2
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saunah-backend-test2
  namespace: class-pm4-2022-7-staging
spec:
  rules:
  - host: saunah-backend-test2.k8s.init-lab.ch
    http:
      paths:
      - backend:
          service:
            name: saunah-backend-test2
            port:
              number: 8080
        path: /
        pathType: Prefix
